# scpi-instrument

./: .gitignore  .mxproject  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json  scpi-def.cpp  scpi-def.h  scpi-device.ioc
Core/Src/: main.c  scpi-def.c  scpi-def.h  stm32f4xx_hal_msp.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
libscpi/: CMakeLists.txt
